--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="submit">Submit</string>
     <string name="action_settings">Settings</string>
     <string name="status_hint">Update your status here.</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
