--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,13 @@
     <string name="action_settings">Settings</string>
     <string name="status_hint">Update your status here.</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="keyUserName">key_username</string>
+    <string name="summaryUserName">Username for your Yamba account</string>
+    <string name="keyUserPW">key_user_pw</string>
+    <string name="summaryUserPW">The password for your Yamba account</string>
+    <string name="defaultUserName">student</string>
+    <string name="defaultUserPW">password</string>
+    <string name="titleUserPW">Password</string>
+    <string name="titleUserName">Username</string>
 
 </resources>
